steps/main.scss
@import '../scss/keyframes.scss';


.animate-steps-fade-down {
    @include animation(fadeInFromTop cubic-bezier(0.550, 0.085, 0.680, 0.530) both);
}
.animate-steps-fade-left {
    @include animation(fadeInFromLeft cubic-bezier(0.550, 0.085, 0.680, 0.530) both);
}
.animate-steps-fade-right {
    @include animation(fadeInFromRight cubic-bezier(0.550, 0.085, 0.680, 0.530) both);
}
.animate-steps-text-focus {
    @include animation(textFocusIn cubic-bezier(0.550, 0.085, 0.680, 0.530) both);
}
.animate-steps-scale {
    @include animation(fadeInScale cubic-bezier(0.550, 0.085, 0.680, 0.530) both);
}
.animate-steps-hide{
    opacity: 0 !important;
}


@include animate-delays(animate-steps, 0, 2, 1.5);
@include animate-delays(animate-steps, 2, 7, 1.5, 1.5, 2);

